synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - image: matrixdotorg/synapse
          imagePullPolicy: IfNotPresent
          name: synapse

          volumeMounts:
            - name: configmap-volume
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml

            - name: configmap-volume
              mountPath: /data/log.config
              subPath: log.config

            - name: configmap-volume
              mountPath: /data/signing.key
              subPath: signing.key

            - mountPath: /data
              name: data
        
        - name: synapse-serve-server-wellknown
          image: chaunceyshannon/synapse-serve-server-wellknown

      volumes:
        - name: configmap-volume
          configMap:
            name: synapse-configmap

        - name: data
          persistentVolumeClaim:
            claimName: synapse-pvc
