synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse-svc
spec:
  selector:
    app: synapse
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: synapse-serve-server-wellknown
      protocol: TCP
      port: 7777
      targetPort: 7777
