synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: im.example.com
  annotations:
    kubernetes.io/ingress.class: kong
    cert-manager.io/cluster-issuer: letsencrypt
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "301"
spec:
  tls:
  - hosts:
    - im.example.com
    secretName: example.com.ssl
  rules:
  - host: im.example.com
    http:
      paths:
      - path: /_matrix
        pathType: Prefix
        backend:
          service:
            name: synapse-svc
            port:
              number: 8008
      - path: /_synapse
        pathType: Prefix
        backend:
          service:
            name: synapse-svc
            port:
              number: 8008
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: synapse-svc
            port:
              number: 8008
      - path: /.well-known/matrix/server
        pathType: Prefix
        backend:
          service:
            name: synapse-svc
            port:
              number: 7777
